fix comtrollers
