# routes/api.php
@@ -22,17 +22,13 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 });
 
 Route::post('/login', [AuthController::class, 'login']);
-Route::post('/logout', [AuthController::class, 'logout']);
 Route::post('/register', [AuthController::class, 'register']);
-
 
 Route::middleware('auth:sanctum')->group(function () {
 
-//    Route::get('/posts/user/{id}', [PostController::class, 'userPosts']);
-//    Route::apiResource('posts', PostController::class);
-//    Route::apiResource('comments', CommentController::class);
+    Route::post('/logout', [AuthController::class, 'logout']);
+    Route::get('/posts/user', [PostController::class, 'userPosts']);
+    Route::apiResource('posts', PostController::class);
+    Route::apiResource('comments', CommentController::class);
 });
 
-Route::get('/posts/user/{id}', [PostController::class, 'userPosts']);
-Route::apiResource('comments', CommentController::class);
-Route::apiResource('posts', PostController::class);
